--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,8 +9,10 @@
     </head>
     <body>
         <h1>Bienvenido a la libreria</h1>
-        <a href="/autor/form">Añadir/ver un autor</a>
-        <a href="/editorial/form">Añadir/ver una editorial</a>
-        <a href="/libro/form">Añadir/ver un libro</a>
+        <a href="/autor/form">AUTORES</a>
+        <a href="/editorial/form">EDITORIALES</a>
+        <a href="/libro/form">LIBROS</a>
+        <a href="/cliente/form">CLIENTES</a>
+        <a href="/prestamo/form">PRESTAMOS</a>
     </body>
 </html>
