--- a/src/main/resources/static/index.css
+++ b/src/main/resources/static/index.css
@@ -7,20 +7,23 @@ body{
 }
 
 a{
-    font-size: 50px;
+    font-size: 40px;
     text-decoration: none;
     margin: 15px;
     border: 2px solid black;
     color: black;
     padding: 15px;
+    width: 300px;
+    text-align: center;
 
 }
 h1{
-    font-size: 60px;
+    font-size: 45px;
+    text-decoration: underline;
 }
 a:hover{
     background-color: black;
     color: white;
-    padding: 25px;
+    padding: 20px;
     border-radius: 15px;
 }
