--- a/src/main/resources/static/formStyle.css
+++ b/src/main/resources/static/formStyle.css
@@ -1,11 +1,15 @@
-body{
+.contenido{
     margin: 10px;
     display: flex;
     flex-direction: column;
-    align-items: center;
-       
+    align-items: center;   
     
-    
+}
+input{
+    margin: 8px;
+}
+select{
+    margin: 8px;
 }
 form{
    width: 350px;
@@ -35,7 +39,11 @@ h1{
 a{
     text-decoration: none;
     padding: 15px;
-    border: 1px solid white;
+   
     background: black;
     color: white;
 }
+.libroBtn{
+    margin-left: 45%;
+}
+
