--- a/src/main/resources/templates/editarAutor.html
+++ b/src/main/resources/templates/editarAutor.html
@@ -1,32 +1,38 @@
-<!DOCTYPE html>
-<!--
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
--->
+
 <html>
     <head>
         <title>Editar autor</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-        <link rel="stylesheet" href="../form-autor.css">
+        <link rel="stylesheet" href="/header.css">
+        <link rel="stylesheet" href="/editar.css">
+        <link rel="stylesheet" href="/footer.css">
+
     </head>
     <body>
-        <form th:action="@{/autor/editarAutor}" method="POST">
-            <input type="hidden" th:value="${autor.id}" name="id"/>
-            <div class="mb-3">
-                <label for="exampleInputPassword1" class="form-label">Nombre</label>
-                <input type="text" class="form-control" id="exampleInputPassword1" placeholder="Nuevo nombre" autocomplete="off" name="nombre" th:value="${autor.nombre}">
-            </div>
-            <div class="mb-3">
-                <label for="exampleInputPassword1" class="form-label">Apellido</label>
-                <input type="text" class="form-control" id="exampleInputPassword1" placeholder="Nuevo apellido" autocomplete="off" name="apellido" th:value="${autor.apellido}">
-            </div>
+        <header th:replace="/fragmentHeader:: header"> </header>
+        <div class="contenido">
+            <h3>Editar autor</h3>
+            <form th:action="@{/autor/editarAutor}" method="POST">
+                <input type="hidden" th:value="${autor.id}" name="id"/>
+                <div class="mb-3">
+                    <label for="exampleInputPassword1" class="form-label">Nombre</label>
+                    <input type="text" class="form-control"  autocomplete="off" name="nombre" th:value="${autor.nombre}">
+                </div>
+                <div class="mb-3">
+                    <label for="exampleInputPassword1" class="form-label">Apellido</label>
+                    <input type="text" class="form-control"   autocomplete="off" name="apellido" th:value="${autor.apellido}">
+                </div>
 
-            <button type="submit" class="btn btn-primary">Enviar</button>
+                <button type="submit" class="btn btn-primary">Enviar</button>
+                <br>
+                <br>
+                <a class="buttonBack" href="/autor/form" >Volver</a>
 
-        </form>
+            </form>
+        </div>
+        <footer th:replace="/fragmentFooter:: footer"> </footer>
 
     </body>
 </html>
