--- a/src/main/resources/templates/editarCliente.html
+++ b/src/main/resources/templates/editarCliente.html
@@ -5,31 +5,41 @@
         <title>Editar cliente</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-         <link rel="stylesheet" href="/editar.css">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">        <link rel="stylesheet" href="/editar.css">
+        <link rel="stylesheet" href="/header.css">
+        <link rel="stylesheet" href="/editar.css">
+        <link rel="stylesheet" href="/footer.css">
     </head>
-    <body
-        <h1>Editar Cliente</h1>
-        <form th:action ="@{/cliente/editar}" method="POST">
-            <input type="hidden" th:value="${cliente.id}" name="id"/>
-            <div class="mb-3">
-                <label for="inputNombre" class="form-label">Nombre</label>
-                <input type="text" class="form-control" id="exampleInputEmail1" placeholder="Nombre del cliente"autocomplete="off" name="nombre" th:value="${cliente.nombre}">
-            </div>
-            <div class="mb-3">
-                <label for="inputapellido" class="form-label">Apellido</label>
-                <input type="text" class="form-control" id="exampleInputEmail1" placeholder="Apellido del cliente"autocomplete="off" name="apellido" th:value="${cliente.apellido}">
-            </div>
-            <div class="mb-3">
-                <label for="inputDocumento" class="form-label">Documento</label>
-                <input type="number" class="form-control" id="exampleInputEmail1" placeholder="Documento del cliente"autocomplete="off" name="documento" th:value="${cliente.documento}">
-            </div>
-            <div class="mb-3">
-                <label for="inputTelefono" class="form-label">Telefono</label>
-                <input type="number" class="form-control" id="exampleInputEmail1" placeholder="Telefono del cliente"autocomplete="off" name="telefono" th:value="${cliente.telefono}">
-            </div>
-            <button type="submit" class="btn btn-primary">Enviar</button>
+    <body>
+        <header th:replace="/fragmentHeader:: header"> </header>
+        <div class="contenido">
+            <h3>Editar Cliente</h3>
+            <form th:action ="@{/cliente/editar}" method="POST">
+                <input type="hidden" th:value="${cliente.id}" name="id"/>
+                <div class="mb-3">
+                    <label for="inputNombre" class="form-label">Nombre</label>
+                    <input type="text" class="form-control" id="exampleInputEmail1" autocomplete="off" name="nombre" th:value="${cliente.nombre}">
+                </div>
+                <div class="mb-3">
+                    <label for="inputapellido" class="form-label">Apellido</label>
+                    <input type="text" class="form-control" id="exampleInputEmail1"autocomplete="off" name="apellido" th:value="${cliente.apellido}">
+                </div>
+                <div class="mb-3">
+                    <label for="inputDocumento" class="form-label">Documento</label>
+                    <input type="number" class="form-control" id="exampleInputEmail1" autocomplete="off" name="documento" th:value="${cliente.documento}">
+                </div>
+                <div class="mb-3">
+                    <label for="inputTelefono" class="form-label">Telefono</label>
+                    <input type="number" class="form-control" id="exampleInputEmail1" autocomplete="off" name="telefono" th:value="${cliente.telefono}">
+                </div>
+                <button type="submit" class="btn btn-primary">Enviar</button>
+                <br>
+                <br>
+                <a class="buttonBack" href="/cliente/form" >Volver</a>
 
 
-        </form>
+            </form>
+        </div>
+        <footer th:replace="/fragmentFooter:: footer"> </footer>
     </body>
 </html>
