--- a/src/main/resources/templates/editarEditorial.html
+++ b/src/main/resources/templates/editarEditorial.html
@@ -6,22 +6,28 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+        <link rel="stylesheet" href="/header.css">
+        <link rel="stylesheet" href="/editar.css">
+        <link rel="stylesheet" href="/footer.css">
 
-        <link rel="stylesheet" href="../form-autor.css">
     </head>
     <body>
-        <form th:action="@{/editorial/editar}" method="POST">
-            <input type="hidden" th:value="${editorial.id}" name="id"/>
-            <div class="mb-3">
-                <label>Editorial</label>
-                <select class="form-control" name="nombre">
-                    <option th:each="editorial : ${editorialesAlta}" th:value="${editorial.nombre}" th:text="${editorial.nombre}" ></option>
-                </select>
-            </div>
-            <button type="submit" class="btn btn-primary">Enviar</button>
+        <header th:replace="/fragmentHeader:: header"> </header>
+        <div class="contenido">
+            <h3>Editar editorial</h3>
+            <form th:action="@{/editorial/editar}" method="POST">
+                <input type="hidden" th:value="${editorial.id}" name="id"/>
+                <div class="mb-3">
+                    <label>Editorial</label>
+                    <input type="text" class="form-control" id="exampleInputPassword1" placeholder="Nombre" autocomplete="off" name="nombre" th:value="${editorial.nombre}">
 
-
-
-        </form>
+                </div>
+                <button type="submit" class="btn btn-primary">Enviar</button>
+                <br>
+                <br>
+                <a class="buttonBack" href="/editorial/form" >Volver</a>
+            </form>
+        </div>
+        <footer th:replace="/fragmentFooter:: footer"> </footer>
     </body>
 </html>
