--- a/src/main/resources/templates/form-cliente.html
+++ b/src/main/resources/templates/form-cliente.html
@@ -1,65 +1,66 @@
-<!DOCTYPE html>
-<!--
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
--->
+
 <html>
     <head>
         <title>Ingresar cliente</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-        <link rel="stylesheet" href="../form-autor.css">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+        <link rel="stylesheet" href="../header.css">
+        <link rel="stylesheet" href="../formStyle.css">
     </head>
-    <body>
-        <form th:action ="@{/cliente/form}" method="POST">
-            <div class="mb-3">
-                <label for="inputNombre" class="form-label">Nombre</label>
-                <input type="text" class="form-control" id="exampleInputEmail1" placeholder="Nombre del cliente"autocomplete="off" name="nombre">
-            </div>
-            <div class="mb-3">
-                <label for="inputapellido" class="form-label">Apellido</label>
-                <input type="text" class="form-control" id="exampleInputEmail1" placeholder="Apellido del cliente"autocomplete="off" name="apellido">
-            </div>
-            <div class="mb-3">
-                <label for="inputDocumento" class="form-label">Documento</label>
-                <input type="number" class="form-control" id="exampleInputEmail1" placeholder="Documento del cliente"autocomplete="off" name="documento">
-            </div>
-            <div class="mb-3">
-                <label for="inputTelefono" class="form-label">Telefono</label>
-                <input type="number" class="form-control" id="exampleInputEmail1" placeholder="Telefono del cliente"autocomplete="off" name="telefono">
-            </div>
-            <button type="submit" class="btn btn-primary">Enviar</button>
+    <body> 
+        <header th:replace="/fragmentHeader:: header"> </header>
+
+        <div class="contenido">
+            <h1>Ingresar Cliente</h1>
+            <form th:action ="@{/cliente/form}" method="POST">
+                <div class="mb-3">
+
+                    <input type="text" class="form-control" id="exampleInputEmail1" placeholder="Nombre del cliente"autocomplete="off" name="nombre">
+                </div>
+                <div class="mb-3">
+
+                    <input type="text" class="form-control" id="exampleInputEmail1" placeholder="Apellido del cliente"autocomplete="off" name="apellido">
+                </div>
+                <div class="mb-3">
+
+                    <input type="number" class="form-control" id="exampleInputEmail1" placeholder="Documento del cliente"autocomplete="off" name="documento">
+                </div>
+                <div class="mb-3">
+
+                    <input type="number" class="form-control" id="exampleInputEmail1" placeholder="Telefono del cliente"autocomplete="off" name="telefono">
+                </div>
+                <button type="submit" class="btn btn-primary">Enviar</button>
 
 
-        </form>
-        
-        <table class="table">
-  <thead>
-    <tr>
-      <th scope="col">#ID</th>
-      <th scope="col">Nombre</th>
-      <th scope="col">Apellido</th>
-      <th scope="col">Documento</th>
-      <th scope="col">Telefono</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr th:each="cliente : ${clientes}">
-      <th scope="row" th:text="${cliente.id}"></th>
-      <td th:text="${cliente.nombre}"></td>
-      <td th:text="${cliente.apellido}"></td>
-      <td th:text="${cliente.documento}"></td>
-      <td th:text="${cliente.telefono}"></td>
-      <td><a th:href="@{/cliente/editar/} + ${cliente.id}"  class="btn btn-warning">Editar</a></td>
-      <td><a th:href="@{/cliente/eliminar/} + ${cliente.id}"    class="btn btn-danger">X</a></td>
-    </tr> 
-   
+            </form>
 
-  </tbody>
-        </table>
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th scope="col">#ID</th>
+                        <th scope="col">Nombre</th>
+                        <th scope="col">Apellido</th>
+                        <th scope="col">Documento</th>
+                        <th scope="col">Telefono</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr th:each="cliente : ${clientes}">
+                        <th scope="row" th:text="${cliente.id}"></th>
+                        <td th:text="${cliente.nombre}"></td>
+                        <td th:text="${cliente.apellido}"></td>
+                        <td th:text="${cliente.documento}"></td>
+                        <td th:text="${cliente.telefono}"></td>
+                        <td><a th:href="@{/cliente/editar/} + ${cliente.id}"  class="btn btn-warning">Editar</a></td>
+                        <td><a th:href="@{/cliente/eliminar/} + ${cliente.id}"    class="btn btn-danger">X</a></td>
+                    </tr> 
 
-<a href="/">Volver a inicio</a>
+
+                </tbody>
+            </table>
+
+            <a href="/">Volver a inicio</a>
+        </div>
     </body>
 </html>
