--- a/src/main/resources/templates/form-editorial.html
+++ b/src/main/resources/templates/form-editorial.html
@@ -1,55 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="../form-autor.css">
-    <title>Ingreso de Editorial</title>
-</head>
-<body>
-  <h1>Carga de datos Editorial</h1>
-  
-<div class="formulario">
-    <h3 th:text="${exito}" class="text-success"></h3>
-  <form th:action="@{/editorial/form}" method="POST" >
-    <div class="mb-3">
-      <label for="exampleInputEmail1" class="form-label">Editorial</label>
-      <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Nombre de la editorial" autocomplete="off" name="nombre">
-     
-   
-    
-    <button type="submit" class="btn btn-primary">Enviar</button>
-  </form>  
-</div>
-</div>
-      
-     
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+        <link rel="stylesheet" href="../formStyle.css">
+        <link rel="stylesheet" href="../header.css">
+        <title>Ingreso de Editorial</title>
+    </head>
+    <body>
+        <header th:replace="/fragmentHeader:: header"> </header>
+        <div class="contenido">
+            <h1>Ingresar Editorial</h1>
 
-<table class="table">
-  <thead>
-    <tr>
-      <th scope="col">#ID</th>
-      <th scope="col">Nombre</th>
-     
-      <th scope="col">Editar</th>
-      <th scope="col">Eliminar</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr th:each="editorial : ${editoriales}">
-      <th scope="row" th:text="${editorial.id}"></th>
-      <td th:text="${editorial.nombre}"></td>
-     
-      <td><a th:href="@{/editorial/editar/} + ${editorial.id}" class="btn btn-warning">Editar</a></td>
-      <td><a th:href="@{/editorial/eliminar/} + ${editorial.id}" class="btn btn-danger">X</a></td>
-    </tr>
-   
+            <div class="formulario">
+                <h3 th:text="${exito}" class="text-success"></h3>
+                <form th:action="@{/editorial/form}" method="POST" >
+                    <div class="mb-3">
 
-  </tbody>
-</table>
-    
-     <a href="/">Volver a inicio</a>
+                        <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Nombre de la editorial" autocomplete="off" name="nombre">
+
+
+
+                        <button type="submit" class="btn btn-primary">Enviar</button>
+                </form>  
+            </div>
+        </div>
+
+
+
+        <table class="table">
+            <thead>
+                <tr>
+                    <th scope="col">#ID</th>
+                    <th scope="col">Nombre</th>
+
+                    <th scope="col">Editar</th>
+                    <th scope="col">Eliminar</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr th:each="editorial : ${editoriales}">
+                    <th scope="row" th:text="${editorial.id}"></th>
+                    <td th:text="${editorial.nombre}"></td>
+
+                    <td><a th:href="@{/editorial/editar/} + ${editorial.id}" class="btn btn-warning">Editar</a></td>
+                    <td><a th:href="@{/editorial/eliminar/} + ${editorial.id}" class="btn btn-danger">X</a></td>
+                </tr>
+
+
+            </tbody>
+        </table>
+
+        <a href="/">Volver a inicio</a>
+    </div>
 </body>
 </html>
