--- a/src/main/resources/templates/form-prestamo.html
+++ b/src/main/resources/templates/form-prestamo.html
@@ -5,52 +5,60 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-        <link rel="stylesheet" href="../form-autor.css">
+        <link rel="stylesheet" href="../formStyle.css">
+        <link rel="stylesheet" href="../header.css">
         <title>Ingreso de Prestamos</title>
     </head>
     <body>
-        <h1>Carga de datos prestamo</h1>
+        <header th:replace="/fragmentHeader:: header"> </header>
+        <div class="contenido">
+            <h1>Ingresar Prestamo</h1>
 
-        <form th:action="@{/prestamo/form}" method="POST">  
-            <div class="mb-3">
-                <label>Cliente</label>
-                <select class="form-control" name="idCliente">
-                    <option th:each="cliente : ${clientes}" th:value="${cliente.id}" th:text="${cliente.nombre} +' '+  ${cliente.apellido}"></option>
-                </select>
-            </div>
-            <div class="mb-3">
-                <label>Libro</label>
-                <select class="form-control" name="idLibro">
-                    <option th:each="libro : ${libros}" th:value="${libro.id}" th:text="${libro.titulo}"></option>
-                </select>
-            </div>
-            <button type="submit" class="btn btn-primary">Enviar</button>
-        </form>
+            <form th:action="@{/prestamo/form}" method="POST">  
+                <div class="mb-3">
 
-        <table class="table">
-            <thead>
-                <tr>
-                    <th scope="col">#ID</th>
-                    <th scope="col">Cliente</th>
-                    <th scope="col">Libro</th>
-                    <th scope="col">Fecha Prestamo</th>
-                    <th scope="col">Fecha Devolucion</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr th:each="prestamo : ${prestamos}">
-                    <th scope="row" th:text="${prestamo.id}"></th>
-                    <td th:text="${prestamo.cliente.nombre} + ' '+ ${prestamo.cliente.apellido}"></td>
-                    <td th:text="${prestamo.libro.titulo}"></td>
-                    <td th:text="${prestamo.fechaPrestamo}"></td>
-                    <td th:text="${prestamo.fechaDevolucion}"></td>
-                    <td><a th:href="@{/prestamo/editar/} + ${prestamo.id}" class="btn btn-warning">Editar</a></td>
-                    <td><a th:href="@{/prestamo/eliminar/} + ${prestamo.id}" class="btn btn-danger">X</a></td>
-                </tr>
-            </tbody>
-        </table>
+                    <select class="form-control" name="idCliente">
+                        <option selected="true" disabled="disabled">Seleccione Cliente</option>
+                        <option th:each="cliente : ${clientes}" th:value="${cliente.id}" th:text="${cliente.nombre} +' '+  ${cliente.apellido}"></option>
+                    </select>
+                </div>
+                <div class="mb-3">
 
-        <a href="/">Volver a inicio</a>
+                    <select class="form-control" name="idLibro">
+                        <option selected="true" disabled="disabled">Seleccione Libro</option>
+                        <option th:each="libro : ${libros}" th:value="${libro.id}" th:text="${libro.titulo}"></option>
+                    </select>
+                </div>
+                <button type="submit" class="btn btn-primary">Enviar</button>
+            </form>
+
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th scope="col">#ID</th>
+                        <th scope="col">Cliente</th>
+                        <th scope="col">Libro</th>
+                        <th scope="col">Fecha Prestamo</th>
+                        <th scope="col">Fecha Devolucion</th>
+                        <th scope="col">Editar</th>
+                        <th scope="col">Eliminar</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr th:each="prestamo : ${prestamos}">
+                        <th scope="row" th:text="${prestamo.id}"></th>
+                        <td th:text="${prestamo.cliente.nombre} + ' '+ ${prestamo.cliente.apellido}"></td>
+                        <td th:text="${prestamo.libro.titulo}"></td>
+                        <td th:text="${prestamo.fechaPrestamo}"></td>
+                        <td th:text="${prestamo.fechaDevolucion}"></td>
+                        <td><a th:href="@{/prestamo/editar/} + ${prestamo.id}" class="btn btn-warning">Editar</a></td>
+                        <td><a th:href="@{/prestamo/eliminar/} + ${prestamo.id}" class="btn btn-danger">X</a></td>
+                    </tr>
+                </tbody>
+            </table>
+
+            <a href="/">Volver a inicio</a>
+        </div>
 
 
     </body>
